--- a/cv.ipynb
+++ b/cv.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSkPRwMpdeQ1eNBmBrojqk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "yi9B1nMsULrA"
       },
@@ -41,44 +40,43 @@
     {
       "cell_type": "code",
       "source": [
-        "# Let's load a simple image with 3 black squares\n",
+        "#simple image with 3 black squares\n",
         "image = cv2.imread('/content/edgedetec.jpg')"
       ],
       "metadata": {
         "id": "8dxYq4CHXsSw"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Grayscale\n",
+        "#Grayscaling\n",
         "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)"
       ],
       "metadata": {
         "id": "rvZtruhOYi2-"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Find Canny edges\n",
+        "# Finding Canny edges\n",
         "edged = cv2.Canny(gray, 30, 200)"
       ],
       "metadata": {
         "id": "Rb_TnUKTY36S"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Finding Contours\n",
-        "# Use a copy of the image e.g. edged.copy()\n",
+        "# Finding Contours uisng a copy of the image e.g. edged.copy()\n",
         "# since findContours alters the image\n",
         "contours, hierarchy = cv2.findContours(edged,\n",
         "    cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)"
@@ -86,7 +84,7 @@
       "metadata": {
         "id": "KYSzuUCqZJSG"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +107,7 @@
         "id": "aC0CgOKfZLMQ",
         "outputId": "f65c87e9-9589-4059-b2e5-e3791f216468"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -146,7 +144,7 @@
         "id": "ZVLHf2yTbCr1",
         "outputId": "ec52d648-405e-49b5-ed70-f9c41224964a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +293,7 @@
         "id": "psPXwyq1bFOx",
         "outputId": "e75e7476-6a44-44b6-ff57-26796677be57"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
